Replaced ActiveActor with GameObject class, Created health bar for boss, Reorganised game objects into packages, changed title to 'Sky Actor', general code and warning cleanup